[gd_scene load_steps=17 format=3 uid="uid://cu6eowfrjmu0i"]

[ext_resource type="Texture2D" uid="uid://xjce8idmu3bm" path="res://assets/Assets_Haunted_House/Assets_Haunted_House/Background_Static_wide.png" id="1_gwdfw"]
[ext_resource type="Texture2D" uid="uid://bodixfqcb0sbl" path="res://assets/Assets_Haunted_House/Assets_Haunted_House/Background_Wide.png" id="1_ph7g2"]
[ext_resource type="Texture2D" uid="uid://dyuo1rne4w51b" path="res://assets/Assets_Haunted_House/Assets_Haunted_House/Door.png" id="4_gwdfw"]
[ext_resource type="Shader" uid="uid://b2vmgcpns6le" path="res://scenes/game/house/house.gdshader" id="4_x0efm"]
[ext_resource type="Script" uid="uid://rxlf0cwk66ld" path="res://scenes/game/bedroom/scripts/door.gd" id="5_a2thg"]
[ext_resource type="Texture2D" uid="uid://d0qm1dhxtjau" path="res://assets/Assets_Haunted_House/Assets_Haunted_House/Chair.png" id="9_5s51m"]
[ext_resource type="AudioStream" uid="uid://dknmkk3p12wrv" path="res://assets/sounds/door/door-shut-36538.mp3" id="9_7nc0h"]
[ext_resource type="PackedScene" uid="uid://bdnf6w86sw2f8" path="res://scenes/char/char.tscn" id="9_gwdfw"]
[ext_resource type="Texture2D" uid="uid://dk3fhg61bwr8h" path="res://assets/Assets_Haunted_House/Assets_Haunted_House/Boxes.png" id="10_ckrhk"]
[ext_resource type="Texture2D" uid="uid://fby87qbt4y0j" path="res://assets/Assets_Haunted_House/Assets_Haunted_House/Table.png" id="10_tvlif"]
[ext_resource type="Script" uid="uid://bafy744e4io5" path="res://scripts/box.gd" id="11_ph7g2"]
[ext_resource type="AudioStream" uid="uid://cpdnkw1ogfob3" path="res://assets/sounds/furniture/plastic-chair-dragged-on-stone-outside-89656.mp3" id="15_qlh1a"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aor32"]
size = Vector2(39.4254, 741)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tt5n8"]
shader = ExtResource("4_x0efm")
shader_parameter/hue_shift = 0.95
shader_parameter/saturation_scale = 1.2
shader_parameter/value_scale = 0.6

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7nc0h"]
size = Vector2(170.667, 292.244)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ru6xh"]
size = Vector2(474.256, 248.655)

[node name="bedroom" type="Node2D"]

[node name="Sprite2D3" type="Sprite2D" parent="."]
position = Vector2(1675, 891)
scale = Vector2(2.18944, 1.35263)
texture = ExtResource("1_ph7g2")

[node name="house" type="Sprite2D" parent="."]
position = Vector2(1554.69, 387)
scale = Vector2(2.02915, 1)
region_enabled = true
region_rect = Rect2(183.122, 1095.82, 1531.75, 755.813)

[node name="house2" type="Sprite2D" parent="house"]
position = Vector2(-319.686, 0)
texture = ExtResource("1_gwdfw")
region_enabled = true
region_rect = Rect2(183.122, 1095.82, 899.849, 755.813)

[node name="house3" type="Sprite2D" parent="house"]
position = Vector2(127.3, 0)
scale = Vector2(-1, 1.009)
texture = ExtResource("1_gwdfw")
region_enabled = true
region_rect = Rect2(183.122, 1095.82, 30.3377, 755.813)

[node name="wall" type="RigidBody2D" parent="house"]
position = Vector2(-744.494, 0)
disable_mode = 2
freeze = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="house/wall"]
shape = SubResource("RectangleShape2D_aor32")

[node name="wall2" type="RigidBody2D" parent="house"]
position = Vector2(132.721, 0)
disable_mode = 2
freeze = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="house/wall2"]
shape = SubResource("RectangleShape2D_aor32")

[node name="doors" type="Node" parent="."]

[node name="door1" type="Sprite2D" parent="doors"]
material = SubResource("ShaderMaterial_tt5n8")
position = Vector2(257, 511)
scale = Vector2(1.21875, 1.00943)
texture = ExtResource("4_gwdfw")
script = ExtResource("5_a2thg")

[node name="Area2D" type="Area2D" parent="doors/door1"]
disable_mode = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="doors/door1/Area2D"]
position = Vector2(9.84616, 2.47665)
shape = SubResource("RectangleShape2D_7nc0h")

[node name="InteractionHint" type="RichTextLabel" parent="doors/door1"]
visible = false
offset_left = -100.923
offset_top = -190.206
offset_right = 123.787
offset_bottom = -52.2063
text = "Corredor do prédio"
fit_content = true
scroll_active = false
autowrap_mode = 1
horizontal_alignment = 1

[node name="openDoor" type="AudioStreamPlayer2D" parent="doors/door1"]
stream = ExtResource("9_7nc0h")

[node name="bedRoomFurnitrune" type="Node2D" parent="."]
visible = false

[node name="chair" type="Sprite2D" parent="bedRoomFurnitrune"]
position = Vector2(724, 566)
scale = Vector2(1.5, 1.5)
texture = ExtResource("9_5s51m")

[node name="Sprite2D" type="Sprite2D" parent="bedRoomFurnitrune"]
position = Vector2(914, 583)
scale = Vector2(1.5, 1.5)
texture = ExtResource("10_tvlif")

[node name="char" parent="." instance=ExtResource("9_gwdfw")]
position = Vector2(105, 581)

[node name="box" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_tt5n8")
position = Vector2(2734, 550)
scale = Vector2(1.21875, 1.00943)
texture = ExtResource("10_ckrhk")
script = ExtResource("11_ph7g2")

[node name="Area2D" type="Area2D" parent="box"]
disable_mode = 2

[node name="boxshape" type="CollisionShape2D" parent="box/Area2D"]
z_index = 1
position = Vector2(-45.1282, -0.495422)
shape = SubResource("RectangleShape2D_ru6xh")

[node name="InteractionHint" type="RichTextLabel" parent="box"]
visible = false
offset_left = -100.923
offset_top = -190.206
offset_right = 123.787
offset_bottom = -52.2063
text = "Aperte \"Z\" para organizar a mudança.  "
fit_content = true
scroll_active = false
autowrap_mode = 1
horizontal_alignment = 1

[node name="furniture" type="AudioStreamPlayer2D" parent="box"]
stream = ExtResource("15_qlh1a")

[node name="transition" type="ColorRect" parent="."]
visible = false
z_index = 2
offset_left = -1495.0
offset_top = -895.0
offset_right = 4491.0
offset_bottom = 2283.0
color = Color(0.0771673, 0.0822927, 0.0798427, 1)

[node name="ReferenceRect" type="ReferenceRect" parent="."]
offset_left = 1783.0
offset_right = 1867.44
offset_bottom = 761.905

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="area_entered" from="doors/door1/Area2D" to="doors/door1" method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="doors/door1/Area2D" to="doors/door1" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="doors/door1/Area2D" to="doors/door1" method="_on_area_2d_body_exited"]
[connection signal="area_entered" from="box/Area2D" to="box" method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="box/Area2D" to="box" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="box/Area2D" to="box" method="_on_area_2d_body_exited"]
